--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -221,7 +221,7 @@ a {
 		padding: 40px 0;
 		}
 	.for_pagehead.size_large .l-submain-h {
-		padding: 70px 0;
+		padding: 3.6em 0;
 		}
 	.for_pagehead.size_huge .l-submain-h {
 		padding: 100px 0;
