--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -728,8 +728,7 @@ input[type="tel"],
 input[type="number"],
 input[type="date"],
 input[type="search"],
-textarea,
-select {
+textarea {
 	font-size: 16px;
 	padding: 8px 0;
 	box-shadow: 0 -1px 0 0 rgba(0,0,0,0) inset;
@@ -740,6 +739,16 @@ select {
 	-webkit-transition: border-color 0.3s, box-shadow 0.3s;
 			transition: border-color 0.3s, box-shadow 0.3s;
 	}
+/* Form inputs */
+select {
+    font-size: 16px;
+    padding: 8px 0;
+    box-shadow: 0 -1px 0 0 rgba(0,0,0,0) inset;
+    border-radius: 0;
+    color: inherit !important;
+    -webkit-transition: border-color 0.3s, box-shadow 0.3s;
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
 input[type="text"],
 input[type="password"],
 input[type="email"],
